# llm-zoomcamp

./: README.md  pyproject.toml
01-intro/: homework.md  main.py
02-open-source/: dockerfile  homework.md
03-vector-search/: llm.ipynb
